# garagepi

./: Pipfile  README.md  app.py  carspeed.py  functions.py  pyproject.toml  requirements.txt  test_speed.py
.env/: pip-selfcheck.json
api/: README.md  app.py  cam.py  garage_doors.py  pyproject.toml  requirements.txt
input/test1/: input.MOV
input/test2/: input.MOV
lib/: camera.py  garage_doors.py
scripts/: start_server.sh
