[tool.poetry]
name = "garagepi"
version = "0.1.0"
description = ""
authors = ["jantoreh <jantorehorn@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
fastapi = "*"
numpy = "*"
uvicorn = "*"
opencv-python = "*"

[tool.poetry.dev-dependencies]
matplotlib = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
