[tool.poetry]
name = "tuftcam-api"
version = "0.1.0"
description = ""
authors = ["jantoreh <jantorehorn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.62.0"
numpy = "^1.18"
Pillow = "^8.0.0"
uvicorn = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
